--- a/assets/style.css
+++ b/assets/style.css
@@ -144,14 +144,14 @@ main {
             flex-flow: column wrap;
             justify-content: flex-end;
             align-items: flex-start;
-            flex: 0 1 48%;
+            flex: 0 1 47%;
             min-height: 200px;
             border: 3px solid white;
             margin: 10px 15px;
         }
 
             #work-big {
-                flex: 0 1 100%;
+                flex: 0 3 100%;
                 min-height: 200px;
                 background-image: url(/assets/microchip.jpg);
                 background-position: 75% 63%;
@@ -228,3 +228,49 @@ main {
             margin: 0 40px;
             border-bottom: 2px solid white;
         }
+
+/* media queries */
+@media screen and (max-width: 1428px) {
+    .work-box a {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: flex-end;
+        align-items: flex-start;
+        flex: 0 1 100%;
+        min-height: 200px;
+        border: 3px solid white;
+        margin: 10px 15px;
+    }
+
+    aside {
+        font-size: 75%;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    main {
+        font-size: 75%;
+    }
+    
+    figure {
+        font-size: 125%;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    aside {
+        font-size: 50%;
+    }
+
+    aside h2 {
+        padding-left: 15px;
+        padding-right: 10px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    aside {
+        font-size: 35%;
+    }
+}
