--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    background-image: url(main/assets/trees.jpg);
+    background-image: url(./assets/trees.jpg);
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
